# crud-python-mysql

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
base_loja_python_mysql/: main.py
loja_python_mysql/: main.py  utils.py
loja_python_mysql/sql/: script.sql
